Core: Implemented hotkey (shift+space) for pause / stop toggle.
* Changed colors for source and acceptable destination slots and proxy
nodes.

--- a/style/main.css
+++ b/style/main.css
@@ -375,7 +375,7 @@ optgroup
 
 .proxy
 {
-	background: #fcd7b3 !important;
+	background: #badaff !important;
 }
 
 .register
